# qiandao

./: .env.example  .env.template  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  entrypoint  example.qiandao.yaml  pyproject.toml  requirements.txt  secret_key.py  test1.py  test2.py
qiandao/: __init__.py  __main__.py  gunicorn.conf.py
qiandao/apps/: __init__.py  it_home.py  linux_do.py  mlol.py  tank.py  test.py  v2ex.py
qiandao/core/: __init__.py  conf.py  log.py  mgr.py  notifications.py  schedule.py  task.py  useragents.py  utils.py
qiandao/core/notify/: __init__.py  bark.py  base.py
qiandao/main/: celery.py  env.py  log.py  secret.py  settings.py  site.py  urls.py  wsgi.py
qiandao/main/templates/admin/: base.html
qiandao/notify/: __init__.py  admin.py  apps.py  models.py
qiandao/notify/migrations/: 0001_initial.py
qiandao/system/: admin.py  apps.py  models.py
qiandao/system/migrations/: 0001_initial.py
qiandao/task/: admin.py  apps.py  base.py  models.py  tasks.py  useragents.py
qiandao/task/buildin/: __init__.py  alipan.py  it_home.py  linux_do.py  mlol.py  tank.py  test.py  v2ex.py
qiandao/task/management/commands/: runtask.py
qiandao/task/migrations/: 0001_initial.py  0002_tank_device_id_tank_refresh_token_alipan.py
