[tool.poetry]
name = "qiandao"
version = "0.1.0"
description = ""
authors = ["raisons <raisonschan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = {extras = ["socks"], version = "^0.27.0"}
fake-useragent = "^1.5.1"
lxml = "^5.2.1"
cssselect = "^1.2.0"
apscheduler = "^3.10.4"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
rich = "^13.7.1"
click = "^8.1.7"
pyyaml = "^6.0.1"
cryptography = "^42.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
httpx = "qiandao:__main__"
