[tool.poetry]
name = "qiandao"
version = "0.2.0"
description = ""
authors = ["raisons <raisonschan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = { extras = ["socks"], version = "^0.27.0" }
fake-useragent = "^1.5.1"
lxml = "^5.2.1"
cssselect = "^1.2.0"
apscheduler = "^3.10.4"
pydantic = "^2.7.1"
rich = "^13.7.1"
click = "^8.1.7"
cryptography = "^42.0.7"
django = "^5.0.6"
djangorestframework = "^3.15.1"
celery = "^5.4.0"
django-celery-beat = "^2.6.0"
redis = "^5.0.4"
gevent = "^24.2.1"
gunicorn = "^22.0.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

